--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $color-primary: #fdc107;
 $color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+$color-primary-dark: #ed491c;
 
 $color-secondary-light: #ffb900;
 $color-secondary: #f5a621;
