Finish reviews and qa sections

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #ed491c;
 
 $color-secondary-light: #ffb900;
-$color-secondary: #f5a621;
+$color-secondary: #52ac62;
 
 $color-tertiary-light: #2998ff;
 $color-tertiary: #5643fa;
