--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -3,26 +3,22 @@
 	&:link,
 	&:visited {
 		display: inline-block;
-		padding: .5rem 1.5rem;
+		padding: 1rem 1.5rem;
 		text: {
 			transform: uppercase;
 			decoration: none;
 			align: center;
 		}
 		transition: .2s;
-		background-color: #d5d5d5;
-		max-width: 150px;
+		background-color: $color-primary;
 		font: {
-			family: 'Perfect DOS VGA 437 Win';
-			size: 1.5rem;
+			size: 2.4rem;
+			weight: bold;
 		}
 		border: none;
+		border-radius: 1rem;
 		cursor: pointer;
-		color: #000082;
-
-		@include respond(big-desktop) {
-			font-size: 2rem;
-		}
+		color: $color-black;
 	}
 
 	&:hover {
@@ -40,5 +36,9 @@
 		transform: translateY(-1px);
 		box-shadow: 0 .5rem 1rem rgba($color-black, 0.2);
 		outline: none;
+	}
+
+	&.btn--secondary {
+		background-color: $color-secondary;
 	}
 }
