--- a/css/style.css
+++ b/css/style.css
@@ -120,21 +120,18 @@ body {
 
 .btn, .btn:link, .btn:visited {
   display: inline-block;
-  padding: .5rem 1.5rem;
+  padding: 1rem 1.5rem;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   transition: .2s;
-  background-color: #d5d5d5;
-  max-width: 150px;
-  font-family: 'Perfect DOS VGA 437 Win';
-  font-size: 1.5rem;
+  background-color: #fdc107;
+  font-size: 2.4rem;
+  font-weight: bold;
   border: none;
+  border-radius: 1rem;
   cursor: pointer;
-  color: #000082; }
-  @media (min-width: 112.5em) {
-    .btn, .btn:link, .btn:visited {
-      font-size: 2rem; } }
+  color: #000; }
 
 .btn:hover {
   transform: translateY(-3px);
@@ -147,6 +144,9 @@ body {
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
   outline: none; }
+
+.btn.btn--secondary {
+  background-color: #52ac62; }
 
 .main-footer {
   color: #fff;
@@ -239,6 +239,17 @@ body {
 
 .products {
   margin-bottom: 4rem; }
+  .products .container {
+    padding-bottom: 7rem;
+    position: relative; }
+    .products .container::before {
+      content: '';
+      width: 100%;
+      height: 3rem;
+      position: absolute;
+      bottom: 0;
+      background-image: url(../img/border.png);
+      background-size: cover; }
   .products .col-md-4,
   .products .col-md-3 {
     padding: 0;
@@ -266,3 +277,64 @@ body {
         .products .col-md-4 a:hover img,
         .products .col-md-3 a:hover img {
           filter: grayscale(0); }
+
+.reviews {
+  margin-bottom: 4rem; }
+  .reviews .container {
+    padding-bottom: 7rem;
+    position: relative; }
+    .reviews .container::before {
+      content: '';
+      width: 100%;
+      height: 3rem;
+      position: absolute;
+      bottom: 0;
+      background-image: url(../img/border.png);
+      background-size: cover; }
+  .reviews .carousel {
+    margin-bottom: 4rem; }
+    .reviews .carousel-caption {
+      color: #000;
+      text-shadow: none; }
+  .reviews .carousel-control {
+    background-image: none; }
+  .reviews .btn {
+    max-width: 100%;
+    width: calc(100% - 15px); }
+
+.qa {
+  margin-bottom: 4rem; }
+  .qa .container {
+    padding-bottom: 3rem;
+    position: relative; }
+    .qa .container::before {
+      content: '';
+      width: 100%;
+      height: 3rem;
+      position: absolute;
+      bottom: 0;
+      background-image: url(../img/border.png);
+      background-size: cover; }
+  .qa .panel-group .panel {
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    font-size: 2rem; }
+  .qa .panel-heading {
+    background-color: transparent;
+    border-bottom: none; }
+    .qa .panel-heading img {
+      width: 1.5rem; }
+  .qa .panel-title {
+    color: #ed491c;
+    font-size: 2rem; }
+  .qa .more {
+    padding: 4rem 0;
+    text-align: center; }
+    .qa .more img {
+      margin-bottom: 2rem; }
+    .qa .more span {
+      display: block;
+      color: #52ac62;
+      font-size: 2.4rem; }
