--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -72,6 +72,21 @@
 .products {
 	margin-bottom: 4rem;
 
+	.container {
+		padding-bottom: 7rem;
+		position: relative;
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 3rem;
+			position: absolute;
+			bottom: 0;
+			background-image: url(../img/border.png);
+			background-size: cover;
+		}
+	}
+
 	& .col-md-4,
 	& .col-md-3 {
 		padding: 0;
@@ -103,6 +118,95 @@
 					filter: grayscale(0);
 				}
 			}
+		}
+	}
+}
+
+.reviews {
+	margin-bottom: 4rem;
+
+	.container {
+		padding-bottom: 7rem;
+		position: relative;
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 3rem;
+			position: absolute;
+			bottom: 0;
+			background-image: url(../img/border.png);
+			background-size: cover;
+		}
+	}
+
+	& .carousel {
+		margin-bottom: 4rem;
+		&-caption {
+			color: $color-black;
+			text-shadow: none;
+		}
+	}
+
+	& .carousel-control {
+		background-image: none;
+	}
+
+	.btn {
+		max-width: 100%;
+		width: calc(100% - 15px);
+	}
+}
+
+.qa {
+	margin-bottom: 4rem;
+
+	.container {
+		padding-bottom: 3rem;
+		position: relative;
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 3rem;
+			position: absolute;
+			bottom: 0;
+			background-image: url(../img/border.png);
+			background-size: cover;
+		}
+	}
+	.panel-group .panel {
+		border: none;
+		box-shadow: none;
+		border-radius: 0;
+		border-bottom: 1px solid rgba($color-black, .2);
+		font-size: 2rem;
+	}
+	.panel-heading {
+		background-color: transparent;
+		border-bottom: none;
+
+		& img {
+			width: 1.5rem;
+		}
+	}
+	& .panel-title {
+		color: $color-primary-dark;
+		font-size: 2rem;
+	}
+
+	.more {
+		padding: 4rem 0;
+		text-align: center;
+
+		& img {
+			margin-bottom: 2rem;
+		}
+
+		& span {
+			display: block;
+			color: $color-secondary;
+			font-size: 2.4rem;
 		}
 	}
 }
