--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,6 +13,10 @@ body {
 	text-align: center;
 	margin-bottom: 4rem;
 
+	@media (max-width: 1200px) {
+		font-size: 4rem;
+	}
+
 	& span {
 		background: url(../img/border-gray.png) no-repeat;
 		background-position: 50%;
