--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,13 +1,51 @@
 .main-footer {
 	color: $color-white;
-	background-color: $color-black;
+	background-color: #131313;
 	padding: 2rem 0;
-	font-size: 1.4rem;
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+	font-size: 2.4rem;
 
-	&-wrap {
-		@include container;
+	@media screen and (max-width: 1199px) {
+		text-align: center;
+	}
+
+	& .col-md-6 {
+		padding: 0;
+	}
+	& .col-md-4 {
+		margin-bottom: 2rem;
+	}
+
+	.contacts-wrap {
+		& .col-md-4 {
+			margin-bottom: 0;
+		}
+	}
+
+	& h3 {
+		color: #d52322;
+	}
+
+	& a {
+		color: $color-white;
+	}
+
+	& img {
+		height: 3rem;
+		width: auto;
+		padding: 0 1.5rem;
+
+		&.youtube {
+			height: auto;
+		}
+	}
+
+	.copyright {
+		& .col-md-6 {
+			padding: 0 15px;
+		}
+
+		& h3 {
+			color: $color-white;
+		}
 	}
 }
