--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -14,7 +14,7 @@
 	}
 
 	&-nav {
-		@media (min-width: 1200px) {
+		@media (min-width: 768px) {
 			transform: translateY(50%);
 		}
 
@@ -25,6 +25,10 @@
 					size: 1.8rem;
 				}
 				color: $color-white;
+
+				@media (max-width: 1199px) {
+					font-size: 1rem;
+				}
 			}
 
 			&.active a,
