--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -47,6 +47,7 @@
 			height: 3rem;
 			position: absolute;
 			bottom: 0;
+			left: 0;
 			background-image: url(../img/border.png);
 			background-size: cover;
 		}
@@ -67,6 +68,13 @@
 			}
 		}
 	}
+
+	@media screen and (max-width: 1199px) {
+		.pull-right {
+			float: none;
+			width: 100%;
+		}
+	}
 }
 
 .products {
@@ -82,6 +90,7 @@
 			height: 3rem;
 			position: absolute;
 			bottom: 0;
+			left: 0;
 			background-image: url(../img/border.png);
 			background-size: cover;
 		}
@@ -110,6 +119,11 @@
 			img {
 				filter: grayscale(10);
 				transition: .3s;
+
+				@media screen and (max-width: 1199px) {
+					display: block;
+					margin: 0 auto;
+				}
 			}
 
 			&:hover {
@@ -135,6 +149,7 @@
 			height: 3rem;
 			position: absolute;
 			bottom: 0;
+			left: 0;
 			background-image: url(../img/border.png);
 			background-size: cover;
 		}
@@ -142,6 +157,9 @@
 
 	& .carousel {
 		margin-bottom: 4rem;
+		& img {
+			height: max-content;
+		}
 		&-caption {
 			color: $color-black;
 			text-shadow: none;
@@ -171,6 +189,7 @@
 			height: 3rem;
 			position: absolute;
 			bottom: 0;
+			left: 0;
 			background-image: url(../img/border.png);
 			background-size: cover;
 		}
@@ -208,5 +227,45 @@
 			color: $color-secondary;
 			font-size: 2.4rem;
 		}
+	}
+}
+
+.partners {
+	margin-bottom: 4rem;
+
+	.container {
+		padding-bottom: 7rem;
+		position: relative;
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 3rem;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			background-image: url(../img/border.png);
+			background-size: cover;
+		}
+	}
+}
+
+.contacts {
+	margin-bottom: 6rem;
+	& h3 {
+		color: $color-primary-dark;
+		margin-bottom: 2rem;
+	}
+
+	& .form-control {
+		margin-bottom: 2rem;
+		resize: none;
+		border-radius: 1rem;
+		font-size: 2rem;
+	}
+
+	& .btn {
+		display: block;
+		margin: 0 auto;
 	}
 }
