--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,31 +28,9 @@ body {
 }
 
 .heading-secondary {
-	display: inline-block;
-
-	font-size: 3.5rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 3px;
-
-	background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-	-webkit-background-clip: text;
-	color: transparent;
-
-	transition: .2s;
-
-	@include respond(tab-port) {
-		font-size: 3rem;
-	}
-
-	@include respond(phone) {
-		font-size: 2.5rem;
-	}
-
-	&:hover {
-		transform: skewX(10deg) skewY(.2deg) scale(1.02);
-		text-shadow: .5rem 1rem 1rem rgba($color-black, .3);
-	}
+	color: $color-secondary;
+	font-size: 3rem;
+	margin-bottom: 4rem;
 }
 
 .heading-tertiary {
