--- a/sass/pages/_products.scss
+++ b/sass/pages/_products.scss
@@ -1,8 +1,10 @@
 .side-nav {
-	position: fixed;
 	background-color: $color-primary;
-	width: 260px;
-	padding: 2rem 0;
+	width: 100%;
+	@media screen and (min-width: 1200px) {
+		position: fixed;
+		width: 260px;
+	}
 
 	& .list-group-item {
 		position: relative;
@@ -26,6 +28,100 @@
 		&:hover {
 			background-color: rgba($color-white, .5);
 			color: $color-black;
+		}
+	}
+}
+
+.products {
+	&-all {
+		font-size: 2rem;
+
+		& .heading-primary + p {
+			margin-bottom: 2rem;
+			padding-bottom: 2rem;
+			border-bottom: 1px solid rgba($color-black, .3);
+		}
+
+		.carousel {
+			margin-bottom: 2rem;
+
+			&::before {
+				content: '';
+				position: absolute;
+				bottom: 0;
+				width: 100%;
+				height: 10px;
+				background-color: $color-primary;
+				border-radius: 10px;
+			}
+		}
+
+		.carousel-inner {
+			margin-bottom: 2rem;
+		}
+
+		.carousel-indicators {
+			position: static;
+			width: 100%;
+			margin-left: 0;
+			padding-bottom: 1.5rem;
+
+			li {
+				width: 25%;
+				height: auto;
+			}
+		}
+
+		.product-item {
+			margin-bottom: 4rem;
+			padding-bottom: 2rem;
+			border-bottom: 1px solid rgba($color-black, .3);
+			.nav-tabs {
+				border: none;
+				margin-bottom: 2rem;
+
+				& li {
+					a {
+						color: rgba($color-black, .6);
+						font-weight: bold;
+					}
+
+					&.active a {
+						border: none;
+						border-bottom: 3px solid $color-primary;
+						color: $color-primary;
+					}
+				}
+			}
+		}
+
+		.table-responsive {
+			border: 1px solid rgba($color-black, .3);
+			border-radius: 10px;
+			padding: 2rem;
+			margin-bottom: 4rem;
+
+			td {
+				vertical-align: middle;
+			}
+
+			.input-number {
+				text-align: center;
+				border: none;
+			}
+
+			& .table-number {
+				color: $color-primary;
+				font: {
+					family: 'Rounds';
+					size: 2.4rem;
+				}
+			}
+			.btn--secondary {
+				display: block;
+				width: max-content;
+				margin: 0 auto;
+			}
 		}
 	}
 }
